--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -254,7 +254,7 @@
     margin-right: auto;
     margin-left: auto;
     border-radius: 2px;
-    margin-top: 27px;
+    margin-top: 30px;
   }
 
   .nav-item-link {
